test/functions/deitz/default/test_default4-error.good
test_default4-error.chpl:1: In function '__init_test_default4-error':
test_default4-error.chpl:25: error: Ambiguous call 'foo()'
error: Candidates are:
test_default4-error.chpl:1: error:   foo(i: int, j: float, k: string)
test_default4-error.chpl:5: error:   foo(i: float, j: string, k: int)
test_default4-error.chpl:9: error:   foo(i: string, j: int, k: float)
